--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
 		"url": "https://github.com/nielslange/smntcs-utilities/issues"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^5.0.0"
+		"npm-run-all": "4.1.5"
 	},
 	"scripts": {
-		"lint:pkg-json": "wp-scripts lint-pkg-json"
+		"test": "npm-run-all --parallel phpcs phplint",
+		"phpcbf": "composer run phpcbf",
+		"phpcs": "composer run phpcs",
+		"phplint": "composer run phplint"
 	}
 }
